# hypr-wpm-meter

./: main.py  oldfunc  pyproject.toml  settings_setup.py
Classes/: PopUps.py  TrayIcon.py
config/: general.json
