[project]
name = "wpm-meter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evdev>=1.9.1",
    "keyboard>=0.13.5",
    "pillow>=11.1.0",
    "pygobject>=3.52.2",
    "pyinstaller>=6.12.0",
    "pynput>=1.8.0",
    "pyqt5>=5.15.11",
    "pystray>=0.19.5",
    "pywayland",
    "pywlroots",
]
